--- a/inc/assets/css/sb-style.css
+++ b/inc/assets/css/sb-style.css
@@ -28,12 +28,13 @@ a {
     text-align: right;
 }
 
-.editor-styles-wrapper .is-root-container.is-layout-flow > *{
+.editor-styles-wrapper .is-root-container.is-layout-flow > * {
     margin-block-start: 0;
 }
 
 /* Columns */
 .wp-block-smart-blocks-columns {
+    position: relative;
     align-items: var(--sb-columns-align-lg);
     background-attachment: var(--sb-columns-bg-img-attachment);
     background-color: var(--sb-columns-bg-color, transparent);
@@ -61,7 +62,19 @@ a {
     padding-top: var(--sb-columns-padding-top-lg, 0);
 }
 
-.wp-block-smart-blocks-columns>.wp-block-smart-blocks-innerblocks-wrap {
+.wp-block-smart-blocks-columns::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: var(--sb-columns-bg-overlay-color);
+    opacity: 0.95;
+}
+
+.wp-block-smart-blocks-columns > .wp-block-smart-blocks-innerblocks-wrap {
+    position: relative;
     align-items: var(--sb-columns-align-lg);
     display: flex;
     gap: var(--sb-columns-gap-row-lg, 20px) var(--sb-columns-gap-column-lg, 20px);
@@ -72,30 +85,33 @@ a {
 
 .wp-block-smart-blocks-columns.has-full-width {
     max-width: var(--sb-columns-width-lg, 100%);
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.wp-block-smart-blocks-columns.has-boxed-width>.wp-block-smart-blocks-innerblocks-wrap {
+.wp-block-smart-blocks-columns.has-boxed-width > .wp-block-smart-blocks-innerblocks-wrap {
     max-width: var(--sb-columns-width-lg, 1170px);
+    width: 100%;
 }
 
 /* Column */
-.wp-block-smart-blocks-columns.has-2-columns>.wp-block-smart-blocks-innerblocks-wrap>.wp-block-smart-blocks-column {
+.wp-block-smart-blocks-columns.has-2-columns > .wp-block-smart-blocks-innerblocks-wrap > .wp-block-smart-blocks-column {
     flex: 0 0 calc(var(--sb-column-width) - var(--sb-columns-gap-column-lg) * 1/2);
 }
 
-.wp-block-smart-blocks-columns.has-3-columns>.wp-block-smart-blocks-innerblocks-wrap>.wp-block-smart-blocks-column {
+.wp-block-smart-blocks-columns.has-3-columns > .wp-block-smart-blocks-innerblocks-wrap > .wp-block-smart-blocks-column {
     flex: 0 0 calc(var(--sb-column-width) - var(--sb-columns-gap-column-lg) * 2/3);
 }
 
-.wp-block-smart-blocks-columns.has-4-columns>.wp-block-smart-blocks-innerblocks-wrap>.wp-block-smart-blocks-column {
+.wp-block-smart-blocks-columns.has-4-columns > .wp-block-smart-blocks-innerblocks-wrap > .wp-block-smart-blocks-column {
     flex: 0 0 calc(var(--sb-column-width) - var(--sb-columns-gap-column-lg) * 3/4);
 }
 
-.wp-block-smart-blocks-columns.has-5-columns>.wp-block-smart-blocks-innerblocks-wrap>.wp-block-smart-blocks-column {
+.wp-block-smart-blocks-columns.has-5-columns > .wp-block-smart-blocks-innerblocks-wrap > .wp-block-smart-blocks-column {
     flex: 0 0 calc(var(--sb-column-width) - var(--sb-columns-gap-column-lg) * 4/5);
 }
 
-.wp-block-smart-blocks-columns.has-6-columns>.wp-block-smart-blocks-innerblocks-wrap>.wp-block-smart-blocks-column {
+.wp-block-smart-blocks-columns.has-6-columns > .wp-block-smart-blocks-innerblocks-wrap > .wp-block-smart-blocks-column {
     flex: 0 0 calc(var(--sb-column-width) - var(--sb-columns-gap-column-lg) * 5/6);
 }
 
@@ -123,6 +139,12 @@ a {
     padding-right: var(--sb-column-padding-right-lg, 0);
     padding-top: var(--sb-column-padding-top-lg, 0);
     align-self: var(--sb-column-align-self-lg);
+}
+
+/* Container */
+.sb-sticky-container{
+    position: sticky;
+    top: var();
 }
 
 /* Block Title */
@@ -232,7 +254,7 @@ a {
     opacity: 0.8;
 }
 
-.sb-post-meta>span {
+.sb-post-meta > span {
     color: var(--sb-post-metas-color, inherit);
     font-family: var(--sb-post-metas-typo-family);
     font-size: var(--sb-post-metas-typo-fs-lg, 12px);
@@ -245,7 +267,7 @@ a {
     text-transform: var(--sb-post-metas-typo-tt, none);
 }
 
-.sb-post-meta>span:last-child {
+.sb-post-meta > span:last-child {
     margin-right: 0;
 }
 
@@ -848,7 +870,7 @@ h3.sb-big-title {
 
 .sb-news-module-three .col1 .sb-post-item,
 .sb-news-module-three .col1 .sb-post-thumb,
-.sb-news-module-three .col1 .sb-post-thumb>a,
+.sb-news-module-three .col1 .sb-post-thumb > a,
 .sb-news-module-three .col1 .sb-thumb-container {
     height: 100%
 }
@@ -1459,7 +1481,7 @@ h3.sb-big-title {
     position: relative;
 }
 
-.sb-post-thumb>a {
+.sb-post-thumb > a {
     display: block;
     overflow: hidden;
     position: relative;
@@ -1489,7 +1511,7 @@ h3.sb-big-title {
     position: relative;
 }
 
-.sb-thumb-inner>a {
+.sb-thumb-inner > a {
     display: block;
     height: 100%;
     position: relative;
@@ -1555,13 +1577,13 @@ h3.sb-big-title {
     width: 100%;
 }
 
-.sb-title-container>a {
+.sb-title-container > a {
     color: #FFF !important;
     display: block;
     padding: 25px 25px 15px;
 }
 
-.sb-title-container .sb-post-meta>span {
+.sb-title-container .sb-post-meta > span {
     color: var(--sb-title-color, #FFF);
 }
 
@@ -1924,7 +1946,7 @@ h3.sb-big-title {
         line-height: var(--sb-excerpt-typo-lh-md, var(--sb-excerpt-typo-lh-lg, 1.3));
     }
 
-    .sb-post-meta>span {
+    .sb-post-meta > span {
         font-size: var(--sb-post-metas-typo-fs-md, var(--sb-post-metas-typo-fs-lg, 12px));
         letter-spacing: var(--sb-post-metas-typo-ls-md, var(--sb-post-metas-typo-ls-lg, 0));
         line-height: var(--sb-post-metas-typo-lh-md, var(--sb-post-metas-typo-lh-lg, 1.3));
@@ -2060,7 +2082,7 @@ h3.sb-big-title {
         line-height: var(--sb-excerpt-typo-lh-sm, var(--sb-excerpt-typo-lh-md, var(--sb-excerpt-typo-lh-lg, 1.3)));
     }
 
-    .sb-post-meta>span {
+    .sb-post-meta > span {
         font-size: var(--sb-post-metas-typo-fs-sm, var(--sb-post-metas-typo-fs-md, var(--sb-post-metas-typo-fs-lg, 12px)));
         letter-spacing: var(--sb-post-metas-typo-ls-sm, var(--sb-post-metas-typo-ls-md, var(--sb-post-metas-typo-ls-lg, 0)));
         line-height: var(--sb-post-metas-typo-lh-sm, var(--sb-post-metas-typo-lh-md, var(--sb-post-metas-typo-lh-lg, 1.3)));
@@ -2199,7 +2221,7 @@ h3.sb-big-title {
         height: auto;
     }
 
-    .sb-thumb-inner.sb-post-thumb>a {
+    .sb-thumb-inner.sb-post-thumb > a {
         background: #f7f7f7;
         background-position: center;
         background-size: cover;
@@ -2384,19 +2406,19 @@ h3.sb-big-title {
 
 body.admin-bar .wp-block-smart-blocks-column.sb-sticky-container {
     position: sticky;
-    top: calc( 32px + var(--sb-sticky-top-spacing, 0));
+    top: calc(32px + var(--sb-sticky-top-spacing, 0));
 }
 
-body.sb-editor-width-full .editor-styles-wrapper .block-editor-block-list__layout.is-root-container > :where(:not(.alignleft):not(.alignright):not(.alignfull)){
+body.sb-editor-width-full .editor-styles-wrapper .block-editor-block-list__layout.is-root-container > :where(:not(.alignleft):not(.alignright):not(.alignfull)) {
     max-width: 100%;
 }
 
-body.sb-editor-width-large .editor-styles-wrapper .block-editor-block-list__layout.is-root-container > :where(:not(.alignleft):not(.alignright):not(.alignfull)){
+body.sb-editor-width-large .editor-styles-wrapper .block-editor-block-list__layout.is-root-container > :where(:not(.alignleft):not(.alignright):not(.alignfull)) {
     width: 1200px;
     max-width: 90%;
 }
 
-body.sb-editor-width-narrow .editor-styles-wrapper .block-editor-block-list__layout.is-root-container > :where(:not(.alignleft):not(.alignright):not(.alignfull)){
+body.sb-editor-width-narrow .editor-styles-wrapper .block-editor-block-list__layout.is-root-container > :where(:not(.alignleft):not(.alignright):not(.alignfull)) {
     width: 800px;
     max-width: 70%;
 }
