--- a/inc/assets/css/editor.css
+++ b/inc/assets/css/editor.css
@@ -2893,3 +2893,11 @@ section.sb-template-import {
     padding: 20px;
     text-align: center;
 }
+
+
+p.sb-inspector-help-text {
+    font-size: 12px;
+    font-style: normal;
+    color: rgb(117, 117, 117);
+    margin-bottom: revert;
+}
